added waitlst functionality.

--- a/tables.html
+++ b/tables.html
@@ -24,7 +24,8 @@
       <br>
 
       <div class="text-center">
-        <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
+        <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make
+            Reservation</button></a>
         <a href="/"><button class="btn btn-lg btn-default"><span class="fa fa-home"></span></button></a>
       </div>
     </div>
@@ -37,7 +38,7 @@
           <div class="card-header">
             <h4>Current Reservations</h4>
           </div>
-          <div class="card-body">
+          <div class="card-body" id="reservation_table">
             <ul id="tableList" class="list-group"></ul>
           </div>
         </div>
@@ -47,7 +48,7 @@
           <div class="card-header">
             <h4>Waiting List</h4>
           </div>
-          <div class="card-body">
+          <div class="card-body" id="waitlist">
             <ul id="waitList" class="list-group"></ul>
           </div>
         </div>
@@ -58,11 +59,44 @@
     <footer class="footer mt-4">
       <div class="container">
         <p>Control Panel</p>
-        <p><a href="#" id="clear">Clear Table</a> | <a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API
+        <p><a href="#" id="clear">Clear Table</a> | <a href="/api/tables">API Table Link</a> | <a
+            href="/api/waitlist">API
             Wait List</a>
       </div>
     </footer>
 
   </div>
-
+  <script type="text/javascript">
+    var currentURL = window.location.origin;
+    $.ajax({ url: currentURL + "/api/tables", method: "GET" })
+      .done(function (data) {
+        console.log(data);
+        if (data) {
+          for (var i = 0; i < data.length; i++) {
+            var div = $("<div>")
+            var reservation_table = $("#reservation_table")
+            var id = data[i].id
+            div.text(id)
+            reservation_table.append(div)
+          }
+        } else {
+          alert("error")
+        }
+        
+        $.ajax({ url: currentURL + "/api/waitlist", method: "GET" })
+          .done(function (data) {
+            if (data) {
+              for (var i = 0; i < data.length; i++) {
+                var div = $("<div>")
+                var waitlist_table = $("#waitlist")
+                var id = data[i].id
+                div.text(id)
+                waitlist_table.append(div)
+              }
+            } else {
+              alert("error")
+            }
+          });
+      });
+  </script>
 </body>
