--- a/reserve.html
+++ b/reserve.html
@@ -90,14 +90,11 @@
 	    function(data){
 
 	    	// If a table is available... tell user they are booked.
-	    	if(data == true){
-	    		alert("Yay! You are officially booked!")
+	    	if(data){
+	    		alert(data)
 	    	}
 
 	    	// If a table is available... tell user they on the waiting list.
-	    	if(data == false){
-	    		alert("Sorry you are on the wait list")
-	    	}
 
 	    	// Clear the form when submitting
     		$('#reserve_name').val("");
